--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,13 @@
-name: Test
+name: Build and Publish Docker
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: Build the Docker image
-      run: docker build .
+    - name: Publish to Docker Repository
+      uses: martyr30/ci-cd-test@master
+      with:
+        name: test-image
+        username: oauth
+        password: ${{ secrets.DOCKER_PASSWORD }}
